# Multiple-QR-codes-Detection-Segmenation-and-Decoding

./: CMakeLists.txt
OpenQR/Application/: OpenQR.cpp  OpenQR.h  main.cpp
